# 3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Data/: scene.txt
Headers/: Camera.h  Figures.h  Line.h  MyDouble.h  Plane.h  Player.h  Point.h  Polygon.h  Shape.h  SoLE.h
Sources/: Camera.cpp  Figures.cpp  Line.cpp  Movements.cpp  MyDouble.cpp  Plane.cpp  Player.cpp  Point.cpp  Polygon.cpp  Shape.cpp  SoLE.cpp  main.cpp
